src/test/deca/context/invalid/LE/appMethSansParenthese.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;

    void constructeur (int valeur ) {
        this.a = valeur ;
    }
}

{
    C1 variable  ;
    variable.constructeur ;
}